<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">搜城</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="no_sd_card">未检测到SD卡，请插入SD卡后重启应用！</string>
    <string name="warn">警告</string>

    <string name="home_btn">首页</string>
    <string name="real_estate_btn">地产</string>
    <string name="read_btn">悦读</string>
    <string name="behind_btn">身边</string>
    <string name="more_btn">更多</string>

    <string name="invite_friend">邀请好友</string>
    <string name="invite_friend_plus">+邀请好友</string>
    <string name="invite_friend_tip">邀请好友注册\n搜城各得1元</string>
    <string name="account_balance">账户可用余额</string>
    <string name="income_immediate">即将获得收入</string>

    <string name="goods1">商品1</string>
    <string name="goods2">商品2</string>
    <string name="goods3">商品3</string>
    <string name="goods4">商品4</string>
    <string name="goods5">商品5</string>
    <string name="goods6">商品6</string>
    <string name="no_goods">暂无商品</string>
    <string name="not_buy_goods">您还没有购买商品</string>

    <string name="my_account">我的账号</string>
    <string name="task_manage">任务管理</string>
    <string name="set">设置</string>
    <string name="suggest">意见反馈</string>
    <string name="question">常见问题</string>
    <string name="upgrade">检查更新</string>
    <string name="about">关于搜城</string>

    <string name="back_icon">&lt;&lt;</string>
    <string name="back">返回</string>
    <string name="open_location_notify">启用位置通知</string>

    <string name="query_addr">查看地址</string>
    <string name="add_addr">添加地址</string>
    <string name="open">启动</string>
    <string name="close">关闭</string>
    <string name="search">搜索</string>

    <string name="welcome1_title">指点江山</string>
    <string name="welcome2_title">一起赚钱</string>
    <string name="welcome3_title">城迷特权</string>
    <string name="welcome4_title">大爱无疆</string>
    <string name="welcome1">我们受够了蔑视的眼神\n
        厌倦了被动的忍耐\n
        从这一刻起,我们要挑战霸权\n
        拥抱移动互联,全民搜城,共赢美好未来\n
        搜城,我们的时代来了
    </string>
    <string name="welcome2">屏保赚钱\n
        看广告赚钱,玩游戏赚钱\n
        看资讯赚钱,读小说赚钱\n
        推荐商家赚钱,邀请好友赚钱 ……\n
        搜城,我们一起赚钱
    </string>
    <string name="welcome3">被一次次的垃圾传播骚扰\n
        被一次次的虚假宣传欺骗\n
        ……\n
        对！无需再忍，城迷享受看信息返现金、兑换商品，还独享折扣特权！\n
        你可以被动选择商家，更有权主动推荐商家，更有封杀特权！\n
        搜城,我们享受特权
    </string>
    <string name="welcome4">“假捐门”、“炒作门”、“骗捐门”……\n
        神圣的公益已经被恶行践踏的一塌糊涂\n
        大众已经变得麻木？空留感叹？\n
        不，我们就是不一样，即使是一块钱，我们是一片赤诚之心！\n
        美丽中国梦 ，全民公益行！\n
    </string>
    <string name="enter">进入搜城</string>
    <string name="share">分享</string>

    <string name="my_income">城币余额</string>
    <string name="exchange_money">现金余额</string>
    <string name="exchange">&gt;</string>
    <string name="donate">&gt;</string>

    <string name="broadcast1">欢迎使用搜城！</string>
    <string name="broadcast2">用搜城一起来赚钱！</string>
    <string name="read_home">悦读首页</string>
    <string name="loading">加载中...</string>
    <string name="soucheng_asset">搜城地产</string>

    <string-array name="locations">
        <item>济南</item>
    </string-array>

    <string name="query_hint">楼盘名/地名/开发商等</string>

    <string name="house">住宅</string>
    <string name="apartment">公寓</string>
    <string name="commercial">商铺</string>
    <string name="work">写字楼</string>
    <string name="rent">出租</string>

    <string name="exit_tip">再次点击退出</string>
    <string name="current_location">当前位置：</string>

    <string name="eat">食客</string>
    <string name="house_behind">宾馆</string>
    <string name="xiuxian">休闲</string>
    <string name="gongyi">公益</string>
    <string name="play">玩家</string>
    <string name="shequ">城迷</string>
    <string name="jiazheng">管家</string>
    <string name="shop">商城</string>

    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="username_tip">输入手机号码</string>
    <string name="password_tip">输入密码</string>
    <string name="password_confirm_tip">再次输入密码</string>
    <string name="sms_tip">输入短信验证码</string>

    <string name="forget_passwrod">忘记密码？</string>
    <string name="third_login">第三方账号登录</string>

    <string name="send_sms">发送验证码</string>
    <string name="send_sms_success">验证码已发送</string>

    <string name="username_warn">用户名不能为空</string>
    <string name="username_repeat">该用户名已注册</string>
    <string name="password_warn">密码不能为空</string>
    <string name="confirm_pwd_warn">密码确认不能为空</string>
    <string name="sms_warn">短信验证码不能为空</string>
    <string name="pwd_diff_warn">确认密码与密码不一致</string>
    <string name="regist_success">注册成功</string>
    <string name="login_failed">用户名或密码不正确</string>

    <string name="invite_qq">发送到QQ</string>
    <string name="invite_weixin">发送到微信朋友圈</string>
    <string name="invite_weibo">发送到新浪微博</string>

    <string name="about_soucheng">关于搜城</string>
    <string name="current_user">当前用户：</string>
    <string name="logout">退出登录</string>

    <string name="not_add_address">您尚未添加地址</string>
    <string name="no_target_address">未找到指定地址</string>
    <string name="address_search_tip">输入要搜索的地址</string>
    <string name="confirm_add_address">确定添加该地址？</string>
    <string name="confirm_delete_address">确认删除该地址？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="add_address_success">添加地址成功</string>
    <string name="delete_address_success">删除地址成功</string>
    <string name="search_tip">请输入关键词搜索</string>

    <string name="my_chengmi">我的城迷</string>
    <string name="recommend">点此推荐精品商家\n可获城币奖励</string>
</resources>
