<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/moreView"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:background="@color/white">
    <Button android:id="@+id/myAccountBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
    <Button android:id="@+id/taskManageBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_manage"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
    <Button android:id="@+id/setBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
    <Button android:id="@+id/suggestBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggest"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
    <Button android:id="@+id/inviteFriendBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_friend"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
    <Button android:id="@+id/questionBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
    <Button android:id="@+id/upgradeBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/upgrade"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
    <Button android:id="@+id/aboutBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:background="@drawable/more_btn_bg"
            android:textColor="@color/dark_gray"/>
</LinearLayout>