<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/title_bg">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/title"
                android:layout_gravity="center_vertical|left"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:layout_gravity="center"
                />
        <Button android:id="@+id/backBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text="@string/back"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"/>
    </FrameLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="20dp">
        <EditText android:id="@+id/usernameEdit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/logo_small"
                  android:inputType="numberDecimal"
                  android:hint="@string/username_tip"
                  android:paddingTop="8dp"
                  android:paddingBottom="8dp"/>
        <Button android:id="@+id/sendSmsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_sms"
                android:background="@android:color/transparent"
                android:textSize="18dp"
                android:textColor="@color/dark_gray"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"/>
        <EditText android:id="@+id/smsEdit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/logo_small"
                  android:inputType="numberDecimal"
                  android:hint="@string/sms_tip"
                  android:paddingTop="8dp"
                  android:paddingBottom="8dp"
                  android:layout_marginTop="10dp"/>
        <EditText android:id="@+id/passwordEdit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/logo_small"
                  android:inputType="textPassword"
                  android:hint="@string/password_tip"
                  android:paddingTop="8dp"
                  android:paddingBottom="8dp"
                  android:layout_marginTop="10dp"/>
        <EditText android:id="@+id/confirmPasswordEdit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawableLeft="@drawable/logo_small"
                  android:inputType="textPassword"
                  android:hint="@string/password_confirm_tip"
                  android:paddingTop="8dp"
                  android:paddingBottom="8dp"
                  android:layout_marginTop="10dp"/>

        <Button android:id="@+id/registBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regist"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/login_regist_btn_bg"
                android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>