<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/title_bg">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/title"
                android:layout_gravity="center_vertical|left"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_addr"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:layout_gravity="center"
                />
        <Button android:id="@+id/backBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text="@string/back"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"/>
    </FrameLayout>
    <ListView
            android:id="@+id/addressShowView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"/>
    <TextView
            android:id="@+id/emptyTip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textColor="@color/dark_gray"
            android:text="@string/not_add_address"
            android:gravity="center"
            android:visibility="gone"/>
</LinearLayout>