<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/wujiang">
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="60dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  android:text="@string/welcome4_title"
                  android:textSize="25dp"
                  android:layout_gravity="center_vertical"
                  android:textStyle="bold"
                  android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/welcome4"
              android:layout_gravity="center_horizontal"
              android:paddingTop="40dp"
              android:textSize="20dp"
              android:lineSpacingExtra="10dp"
              android:textColor="@color/white"
              android:gravity="left"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"/>

    <Button
            android:id="@+id/centerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="@drawable/welcome_btn_selector"/>

</LinearLayout>