<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/title_bg">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/title"
                android:layout_gravity="center_vertical|left"/>

        <!-- <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textSize="25dp"
                 android:textColor="@color/white"
                 android:padding="5dp"
                 android:layout_weight="7"/>-->
        <Button android:id="@+id/backBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:text="@string/back"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"/>
    </FrameLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="20dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/current_user"
                      android:textSize="20dp"
                      android:textColor="@color/dark_gray"/>
            <TextView android:id="@+id/currentUser"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text=""
                      android:textSize="20dp"
                      android:textColor="@color/dark_gray"/>
        </LinearLayout>

        <Button android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/login_regist_btn_bg"
                android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>